--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,16 @@
-.App {
-  text-align: center;
+html {
+  background: #eeeff0;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.nav-bar {
+  height: 90px;
+  background: #14314f;
+  font-size: 30px;
+  color: #fff;
+  padding-left: 24px;
+  line-height: 90px;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.action-bar {
+  height: 90px;
 }
