--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
+html,
+body,
+ul,
+ol {
+  margin: 0;
+}
+
+* {
+  box-sizing: border-box;
+}
+
 html {
   background: #eeeff0;
 }
@@ -11,6 +22,110 @@ html {
   line-height: 90px;
 }
 
+.success {
+  background: #1ec659;
+  color: #fff;
+  float: right;
+  border-radius: 2px;
+  padding: 6px 12px;
+  font-size: 14px;
+  cursor: pointer;
+  transition: background 0.6s;
+  text-decoration: none;
+  margin-left: 5px;
+}
+
+.success:hover {
+  background: #1ab250;
+}
+
+.success:active {
+  background: #19a84b;
+}
+
 .action-bar {
   height: 90px;
+  padding-right: 24px;
+  padding-top: 30px;
+  border-bottom: solid 1px rgba(0, 0, 0, 0.12);
+}
+
+.order {
+  display: inline-block;
+  width: 40px;
+}
+
+.item {
+  border-bottom: solid 1px rgba(0, 0, 0, 0.12);
+  padding-left: 24px;
+  padding-right: 24px;
+  height: 90px;
+  line-height: 90px;
+}
+
+.item:nth-child(even) {
+  background: #fff;
+}
+
+.item:hover {
+  background: rgba(30, 198, 89, 0.1);
+}
+
+.actions {
+  display: none;
+  float: right;
+}
+
+.action {
+  text-decoration: none;
+  color: black;
+  border: 1px solid;
+  border-radius: 2px;
+  padding: 5px 12px;
+  margin-left: 4px;
+  font-size: 14px;
+  cursor: pointer;
+  transition: background 0.6s;
+}
+
+.action:hover {
+  background: rgba(255, 255, 255, 0.5);
+}
+
+.item:hover > .actions {
+  display: block;
+}
+
+.wrapper {
+  padding: 40px 32px;
+}
+
+.panel {
+  background: #fff;
+  padding: 10px;
+  margin-bottom: 20px;
+}
+
+.label {
+  margin-bottom: 0.5rem;
+  display: inline-block;
+}
+
+.field {
+  padding: 0.5rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.25;
+  color: #464a4c;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid rgba(0, 0, 0, 0.15);
+  border-radius: 0.25rem;
+  transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s,
+    -webkit-box-shadow ease-in-out 0.15s;
+  width: 100%;
+}
+
+.field:focus {
+  border-color: #5cb3fd;
+  outline: 0;
 }
